<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:weightSum="6">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/stats_player_label"
            android:layout_width="150sp"
            android:layout_height="35sp"
            android:gravity="right"
            android:layout_weight="0.5"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp"
            android:textStyle="bold"
            android:text="@string/stats_player_label"/>
        <TextView
            android:id="@+id/stats_player"
            android:layout_width="150sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textColor="#ff2d1dff"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp"
            android:textStyle="bold"
            android:text="@string/stats_player"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/stats_cum_score_label"
            android:layout_width="150sp"
            android:layout_height="35sp"
            android:gravity="right"
            android:layout_weight="0.5"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp"
            android:textStyle="bold"
            android:text="@string/stats_cum_score_label"/>
        <TextView
            android:id="@+id/stats_cum_score"
            android:layout_width="150sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textColor="#ff2d1dff"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp"
            android:textStyle="bold"
            android:text="@string/stats_cum_score"/>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_weight="0.5">
        <TextView
            android:id="@+id/stats_avg_diff_label"
            android:layout_width="150sp"
            android:layout_height="35sp"
            android:gravity="right"
            android:layout_weight="0.5"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp"
            android:textStyle="bold"
            android:text="@string/stats_avg_diff_label"/>
        <TextView
            android:id="@+id/stats_avg_diff"
            android:layout_width="150sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textColor="#ff2d1dff"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp"
            android:textStyle="bold"
            android:text="@string/stats_avg_diff"/>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_weight="0.5">
        <TextView
            android:id="@+id/stats_avg_guess_label"
            android:layout_width="150sp"
            android:layout_height="35sp"
            android:gravity="right"
            android:layout_weight="0.5"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp"
            android:textStyle="bold"
            android:text="@string/stats_avg_guess_label"/>
        <TextView
            android:id="@+id/stats_avg_guess"
            android:layout_width="150sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textColor="#ff2d1dff"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp"
            android:textStyle="bold"
            android:text="@string/stats_avg_guess"/>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_weight="0.5">
        <TextView
            android:id="@+id/stats_avg_skip_label"
            android:layout_width="150sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:gravity="right"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp"
            android:textStyle="bold"
            android:text="@string/stats_avg_skip_label"/>
        <TextView
            android:id="@+id/stats_avg_skip"
            android:layout_width="150sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textColor="#ff2d1dff"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp"
            android:textStyle="bold"
            android:text="@string/stats_avg_skip"/>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_weight="0.5">
        <TextView
            android:id="@+id/stats_avg_hint_label"
            android:layout_width="150sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:gravity="right"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp"
                android:textStyle="bold"
            android:text="@string/stats_avg_hint_label"/>
        <TextView
            android:id="@+id/stats_avg_hint"
            android:layout_width="150sp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:textColor="#ff2d1dff"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp"
            android:textStyle="bold"
            android:text="@string/stats_avg_hint"/>
    </LinearLayout>

</LinearLayout>