<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/game_menu_but_sfib_help_1"
            android:layout_width="150sp"
            android:layout_height="75sp"
            android:layout_weight="0.5"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="5sp"
            android:background="@drawable/rounded_corner"
            android:text="@string/game_menu_but_sfib_help"/>

        <Button
            android:id="@+id/game_menu_but_sfib_french"
            android:layout_width="150sp"
            android:layout_height="75sp"
            android:layout_weight="0.5"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="5sp"
            android:background="@drawable/rounded_corner"
            android:text="@string/game_menu_but_sfib_french"/>
    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:gravity="center"
                  android:layout_weight="1">

        <Button
            android:id="@+id/game_menu_but_sfib_help_2"
            android:layout_width="150sp"
            android:layout_height="75sp"
            android:layout_weight="0.5"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="5sp"
            android:background="@drawable/rounded_corner"
            android:text="@string/game_menu_but_sfib_help"/>

        <Button
            android:id="@+id/game_menu_but_sfib_spanish"
            android:layout_width="150sp"
            android:layout_height="75sp"
            android:layout_weight="0.5"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="5sp"
            android:background="@drawable/rounded_corner"
            android:text="@string/game_menu_but_sfib_spanish"/>
    </LinearLayout>

</LinearLayout>
