<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/blue_grey_700"
              android:orientation="vertical"
              android:gravity="center"
              android:weightSum="4">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_google_icon"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="@dimen/g_top_margin"
            android:contentDescription="@string/login_desc_google_icon"
            android:src="@drawable/googleg_color" />

        <TextView
            android:id="@+id/login_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:text="@string/login_title_text"
            />

        <TextView
            android:id="@+id/login_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:text="@string/login_signed_out"
            />

        <TextView
            android:id="@+id/login_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:gravity="center"
            android:maxLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_but_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="gone"
            />

    </LinearLayout>

</LinearLayout>
